--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "localStorage": "^1.0.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^3.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
